<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/home" />
        <item
            android:id="@+id/menu"
            android:icon="@drawable/menu"
            android:title="@string/menu" />
        <item
            android:id="@+id/kinesi"
            android:icon="@drawable/kin"
            android:title="@string/kin" />
        <item
            android:id="@+id/blog"
            android:icon="@drawable/blog"
            android:title="@string/blog" />

    </group>



</menu>
