<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_detail_image"
            android:contentDescription="@string/image_des"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/detail_long_description"
            style="@style/InfoDescriptionTextStyle"
            android:fontFamily="@font/nunito_sans_italic"
            android:paddingTop="@dimen/padding"
            android:textSize="22dp"
            tools:text="@string/description" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/padding_top"
            android:paddingBottom="@dimen/padding_bottom">

            <TextView
                android:id="@+id/detail_phone"
                style="@style/DetailTextViewStyle"
                android:autoLink="phone"
                android:textSize="22dp"
                tools:text="@string/phone" />

            <TextView
                android:id="@+id/detail_web"
                style="@style/DetailTextViewStyle"
                android:autoLink="web"
                android:textSize="22dp"
                tools:text="@string/web" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>