<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_blue"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        style="@style/InfoDescriptionTextStyle"
        android:layout_marginStart="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/nunito_sans_italic"
        android:gravity="center"
        android:text="@string/title_contact"
        android:textColor="@android:color/white"
        android:textSize="22dp" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:background="@android:color/white"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:paddingLeft="8dp"
        android:scrollbars="vertical"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editEmailBody"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_below="@+id/editTitle"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:gravity="top"
        android:hint="@string/message"
        android:inputType="textMultiLine"
        android:paddingLeft="8dp"
        android:scrollbars="vertical"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sendMail"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editEmailBody"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:padding="2dp"
        android:text="@string/send"
        android:textColor="@android:color/white" />
</RelativeLayout>