<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:src="@drawable/swimming" />

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:text="@string/kin"
            android:textSize="28dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/kin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivKin1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:src="@drawable/quote" />

            <TextView
                android:id="@+id/tvKin1"
                style="@style/InfoDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/ivKin1"
                android:layout_toRightOf="@id/ivKin1"
                android:fontFamily="@font/nunito_sans_italic"
                android:text="@string/kin_des1"
                android:textSize="22dp" />

        </RelativeLayout>

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:fontFamily="@font/nunito_sans_italic"
            android:text="@string/kin_des2"
            android:textSize="22dp" />

        <RelativeLayout
            android:id="@+id/kin3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/ivKin3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="24dp"
                android:src="@drawable/quote" />

            <TextView
                android:id="@+id/tvKin3"
                style="@style/InfoDescriptionTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/ivKin3"
                android:layout_toRightOf="@id/ivKin3"
                android:fontFamily="@font/nunito_sans_italic"
                android:text="@string/kin_des3"
                android:textSize="22dp" />

        </RelativeLayout>

        <TextView
            style="@style/InfoDescriptionTextStyle"
            android:fontFamily="@font/nunito_sans_italic"
            android:text="@string/kin_des4"
            android:textSize="22dp" />

        <include
            layout="@layout/kinesy_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</ScrollView>